# SliceNStitch

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: constants.hpp  loader.cpp  loader.hpp  main.cpp  tensor.cpp  tensor.hpp  tensorStream.cpp  tensorStream.hpp  utils.cpp  utils.hpp
